--- a/BUBBLE GAME/index.html
+++ b/BUBBLE GAME/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     <div id="main">
@@ -30,7 +31,8 @@
         </div>
     </div>
 
+<script src="./script.js"></script>
 
-    <script src="app.js"> </script>
 </body>
+
 </html>
